--- a/views/tasks.handlebars
+++ b/views/tasks.handlebars
@@ -6,12 +6,12 @@
             <p>Description: {{this.description}}</p>
             <p>Status: {{this.status}}</p>
             <select class="status-select">
-                <option value="pending"{{#if (this.status "pending")}} selected{{/if}}>Pending</option>
-                <option value="completed"{{#if (this.status "completed")}} selected{{/if}}>Completed</option>
-                <option value="inProgress"{{#if (this.status "inProgress")}} selected{{/if}}>In Progress</option>
+                <option value="pending"{{#if (eq this.status "pending")}} selected{{/if}}>Pending</option>
+                <option value="completed"{{#if (eq this.status "completed")}} selected{{/if}}>Completed</option>
+                <option value="inProgress"{{#if (eq this.status "inProgress")}} selected{{/if}}>In Progress</option>
             </select>
             <button class"update-status">Update Status</button>
         </div>
-        {{/each}}
+        {{/each}} --}}
 
- --}}
+
