--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -7,7 +7,7 @@
     <div class="card" style="width: 18rem;">
         <div class="card-header">Log In</div>
         <div class="card-body">
-            <form action="/auth/register" method="POST">
+            <form action="/" method="POST">
                 <div class="mb-3">
                     <label for="name-reg" class="form-label">Usernamne</label>
                     <input type="text" class="form-control" id="name-reg" name="name">
