--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -2,7 +2,7 @@
         <div class="card" style="width: 18rem;">            
             <div class="card-header">Register</div>    
             <div class="card-body">
-                <form action="/auth/register" method="POST">
+                <form action="/" method="POST">
                     <div class="mb-3">
                         <label for="name-reg" class="form-label">Name</label>
                         <input type="text" class="form-control" id="name-reg" name="name">                        
@@ -26,4 +26,4 @@
         </div>
     </div>
 
-<script src="../public/js/logout.js"></script>
+<script src="../public/js/register.js"></script>
