added register.js and register form

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -11,7 +11,7 @@
 <div>
     <h1>New Task</h1>
     <ul>
-        <li>Task Name:{{task_name}} </li>
+        <li>Task Name:{{title}} </li>
         <li>Start Date:{{start_date}}</li>
         <li>Due Date:{{due_date}}</li>
         <li>Description:{{description}} </li>
