working on passing correct data after login

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,4 +1,5 @@
-<h1> My Tasks</h1>
+
+{{#if logged_in}} <h1> My Tasks</h1>
 <div class="d-grid gap-2">
   <button class="btn btn-primary" type="button">Add new task </button>
 </div>
@@ -11,10 +12,9 @@
 <div>
     <h1>New Task</h1>
     <ul>
-        <li>Task Name:{{task_name}} </li>
-        <li>Start Date:{{start_date}}</li>
-        <li>Due Date:{{due_date}}</li>
-        <li>Description:{{description}} </li>
+        <li>Task Name:{{task.title}} </li>
+        <li>status:{{task.status}}</li>
+        <li>Description:{{task.description}} </li>
     </ul>
 </div>
 
@@ -29,4 +29,10 @@
 <div>
     <h1>Completed: {{complete}}</h1>
 </div>
+{{else}}
+<h1>Please log in to view your tasks. (introdution)
+    
+</h1>
+{{/if}}
+
 
