--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -13,7 +13,7 @@
                         </div>
                         <div class="mb-3">
                             <label for="password-login" class="form-label">Password</label>
-                            <input type="password" class="form-control" id="password-login" name="password">
+                            <input type="password" class="form-control" id="password-login" name="password" autocomplete="current-password">
                         </div>
                         <button type="submit" class="btn btn-primary">Submit</button>
                     </form>
