login and registration endpoints added working correctly

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -6,7 +6,7 @@
             <div class="card" style="width: 18rem;">
                 <div class="card-header">Log In</div>
                 <div class="card-body">
-                    <form action="/" method="POST">
+                    <form action="/api/users/login" method="POST">
                         <div class="mb-3">
                             <label for="email-login" class="form-label">Email</label>
                             <input type="email" class="form-control" id="email-login" name="email">
