succesful login data and render

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -12,9 +12,9 @@
 <div>
     <h1>New Task</h1>
     <ul>
-        <li>Task Name:{{task.title}} </li>
-        <li>status:{{task.status}}</li>
-        <li>Description:{{task.description}} </li>
+        <li>Task Name:{{title}} </li>
+        <li>status:{{status}}</li>
+        <li>Description:{{description}} </li>
     </ul>
 </div>
 
