--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -23,7 +23,7 @@
       <nav>
         {{#if logged_in}}
         <button id="logout">logout</button>
-        <p>{{user.username}}</p>
+        <p>{{email}}</p>
         {{else}}
         <a href="/login">login</a>
         {{/if}}
