--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -30,6 +30,6 @@
         </ul>
     </nav>
     
-    <script src="../public/js/login.js"></script>
+    <script src="/public/js/login.js"></script>
 </body>
 </html>
