--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -2,7 +2,7 @@
     <div class="card" style="width: 18rem;">
         <div class="card-header">Register</div>
         <div class="card-body">
-            <form action="/api/users/login" method="POST">
+            <form action="/api/users/register" method="POST">
                 <div class="mb-3">
                     <label for="username-reg" class="form-label">Username</label>
                     <input type="text" class="form-control" id="username-reg" name="username">
