--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -27,17 +27,19 @@
       </div>
     </form>
   </div>
- 
+
+<script id="task-template" type="text/x-handlebars-template"></script>
+    {{#each tasks}}
+    <div class="box mt-3" data-task-id="{{this.id}}">
+      <h2 class="title is-5">{{this.title}}</h2>
+      <p>Status: {{this.status}}</p>
+      <p>Description: {{this.description}}</p>
+      <button class="update-status">Update Status</button>
+    </div>
+    {{/each}}
 
 
 
-{{#each tasks}}
-<div class="box mt-3">
-  <h2 class="title is-5">{{this.title}}</h2>
-  <p>Status: {{this.status}}</p>
-  <p>Description: {{this.description}}</p>
-</div>
-{{/each}}
 
 
 
@@ -46,3 +48,4 @@
 {{else}}
 <h1>Please log in to view your tasks.</h1>
 {{/if}}
+<script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.7.7/handlebars.min.js"></script>
