--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -50,9 +50,9 @@
   <main class="section">
     <div class="container">
       {{{ body }}}
-    </div>
-  </main>
-
+ <div id="taskList"></div>
+  </div>
+</main>
   <footer class="footer">
     <div class="content has-text-centered">
       <p>
@@ -60,8 +60,11 @@
       </p>
     </div>
   </footer>
-
+<script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.7.7/handlebars.min.js"></script>
   <script src="/js/logout.js"></script>
+  <script src="/js/tasks.js"></script>
+
+
   
 </body>
 
