--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,7 +1,8 @@
 {{#if logged_in}}
 <h1 class="title"> Welcome, {{ username }} </h1>
 
-<a href="/tasks" class="button is-primary">My Tasks</a>
+<a href="/api/tasks" class="button is-primary">My Tasks</a>
+
 
 {{else}}
 <h1>Please log in to view your tasks.</h1>
