--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,14 +1,10 @@
-
 {{#if logged_in}}
 <h1 class="title"> Welcome, {{ username }} </h1>
 
 <a href="/api/tasks" class="button is-primary">My Tasks</a>
 
 
-    {{/each}}
-
-
-
-
-
-
+{{else}}
+<h1>Please log in to view your tasks.</h1>
+{{/if}}
+<script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.7.7/handlebars.min.js"></script>
