updated and fixed errors in task routes

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -23,7 +23,7 @@
       <nav>
         {{#if logged_in}}
         <button id="logout">logout</button>
-        <p>{{email}}</p>
+        <p>Welcome back {{username}}!</p>
         {{else}}
         <a href="/login">login</a>
         {{/if}}
