--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,4 +1,4 @@
-
+/* Home and login page */
 #my-task {
     font-family: Helvetica, Arial, sans-serif;
     font-size: 36px;
@@ -74,3 +74,24 @@ h4 {
 
 }
 
+/* Task pages */
+
+.task-status {
+    font-family: Helvetica, Arial, sans-serif;
+    font-size: 34px;
+    font-weight: bold;
+    text-align: center;
+    margin-bottom: 1%;
+}
+
+.completed-table {
+    background-color: rgb(239, 255, 252);
+}
+
+.inprogress-table {
+    background-color: rgb(255, 251, 239);
+}
+
+.pending-table {
+    background-color: rgb(239, 248, 255);
+}
