working on grabing correct id

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -19,7 +19,7 @@
       </div>
       <div class="field is-grouped">
         <div class="control">
-          <button id="addBtn" class="button is-primary" type="submit">Add Task</button>
+          <button id="addBtn" class="button addTask is-primary" type="submit">Add Task</button>
         </div>
         <div class="control">
           <button class="button is-danger" type="button" data-bs-dismiss="modal">Cancel</button>
