--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -31,7 +31,7 @@
                 <p class="buttons">
                   <button id="logout" class="button is-light">Logout</button>
                 </p>
-                <p>{{email}}</p>
+                <p> HI ,{{username}}</p>
                 {{else}}
                 <a href="/login" class="button is-light">Login</a>
                 {{/if}}
