added css to register page

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,33 +1,30 @@
 <body>
 
-    <nav>
-        <h4 class="cntr"> Log in </h4>
-        <div class="card container mt-4" style="width: 22rem;">
-            <form class="loginForm" action="/api/users/login" method="POST">
-                <div class="mb-3">
 
-                    <input type="email" placeholder="Email" class="form-control input is-medium is-focused loginBtns"
-                        id="email-login" name="email">
+    <h4 class="cntr"> Log in </h4>
+    <div class="card container mt-4" style="width: 22rem;">
+        <form class="loginForm" action="/api/users/login" method="POST">
+            <div class="mb-3">
 
-                    <input type="password" placeholder="Password"
-                        class="form-control input is-medium is-focused loginBtns" id="password-login" name="password"
-                        autocomplete="current-password">
+                <input type="email" placeholder="Email" class="form-control input is-medium is-focused loginBtns"
+                    id="email-login" name="email">
 
-                    <button type="submit" class="button is-success submit-btn loginBtns" class="loginBtns">Log
-                        in</button>
+                <input type="password" placeholder="Password" class="form-control input is-medium is-focused loginBtns"
+                    id="password-login" name="password" autocomplete="current-password">
 
+                <button type="submit" class="button is-success submit-btn loginBtns">Log
+                    in</button>
 
-                    <button type="submit" class="button is-success submit-btn loginBtns" class="loginBtns"><a
-                            href="/register">Create new
-                            account</a></button>
+                <button type="submit" class="button is-success submit-btn loginBtns"><a href="/register">Create new
+                        account</a></button>
 
-                    <h1 style="text-align:center;" class="loginBtns">Or</h1>
-                    <a class="button is-link loginBtns google" style="width: 18rem;"
-                        href="/login/federated/google">Sign in with Google</a>
-                </div>
-            </form>
-        </div>
-    </nav>
+                <h1 style="text-align:center;" class="loginBtns">Or</h1>
+                <a class="button is-link loginBtns google" style="width: 18rem;" href="/login/federated/google">Sign in
+                    with Google</a>
+            </div>
+        </form>
+    </div>
+
 
     <script src="../public/js/login.js"></script>
 </body>
