--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -1,25 +1,21 @@
-<div class="container mt-4">
-    <div class="card" style="width: 18rem;">
-        <div class="card-header">Register</div>
-        <div class="card-body">
-            <form action="/api/users/login" method="POST">
-                <div class="mb-3">
-                    <label for="username-reg" class="form-label">Username</label>
-                    <input type="text" class="form-control" id="username-reg" name="username">
-                </div>
-                <div class="mb-3">
-                    <label for="email-reg" class="form-label">Email</label>
-                    <input type="text" class="form-control" id="email-reg" name="email">
-                </div>
-                <div class="mb-3">
-                    <label for="password-reg" class="form-label">Password</label>
-                    <input type="password" class="form-control" id="password-reg" name="password">
-                </div>
+<h4 class="cntr">Sign Up</h4>
 
-                <button type="submit" class="btn btn-primary">Submit</button>
-            </form>
+<div class="card container mt-4" style="width: 22rem;">
+
+    <form class="loginForm" action="/api/users/login" method="POST">
+        <div class="mb-3">
+            <input type="text" placeholder="Username" class="form-control input is-medium is-focused loginBtns"
+                id="username-reg" name="username">
+
+            <input type="text" placeholder="Email" class="form-control input is-medium is-focused loginBtns"
+                id="email-reg" name="email">
+
+            <input type="password" placeholder="Password" class="form-control input is-medium is-focused loginBtns"
+                id="password-reg" name="password">
+
+            <button type="submit" class="button is-success submit-btn loginBtns">Sign Up</button>
         </div>
-    </div>
+    </form>
 </div>
 
 <script src="../public/js/register.js"></script>
