--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -26,7 +26,7 @@
     </div>
 
 
-    <script src="../public/js/login.js"></script>
+    <script src="/public/js/login.js"></script>
 </body>
 
 </html>
