--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,5 +1,6 @@
+
 <!DOCTYPE html>
-<html lang="en" data-theme="dark">
+<html lang="en">
 
 <head>
   <meta charset="UTF-8">
@@ -14,64 +15,32 @@
 </head>
 
 <body>
-  <section class="hero is-dark is-bold">
-    <div class="hero-body">
-      <div class="container">
-        <nav class="navbar">
-          <div class="navbar-brand">
-            <h1 class="navbar-item">
-              <a href="/" class="title has-text-light">Task Manager</a>
-            </h1>
-            <span class="navbar-burger burger has-text-light" id="nav-toggle">
-              <span></span>
-              <span></span>
-              <span></span>
-            </span>
-          </div>
-          <div class="navbar-menu" id="navbar-menu">
-            <div class="navbar-end">
-              <div class="navbar-item">
-                {{#if logged_in}}
-                <div class="buttons">
-                  <button id="logout" class="button is-light">Logout</button>
-                </div>
-                <p class="has-text-light">{{email}}</p>
-                {{else}}
-                <a href="/login" class="button is-light">Login</a>
-                {{/if}}
-              </div>
-              <div class="navbar-item">
-                <button id="dark-mode-toggle" class="button is-light">Dark Mode</button>
-              </div>
-            </div>
-          </div>
-        </nav>
-      </div>
-    </div>
-  </section>
-
-  <main class="section">
-    <div class="container">
-      <div id="taskList"></div>
+  <div class="flex-column justify-space-around">
+    <header class="display-flex justify-space-between align-center p-2">
+      <h1>
+        <a href="/">Task manager!!</a>
+      </h1>
+      <nav>
+        {{#if logged_in}}
+        <button id="logout">logout</button>
+        <p>Welcome back {{username}}!</p>
+        {{else}}
+        <a href="/login">login</a>
+        {{/if}}
+      </nav>
+    </header>
+    
+    <main class="container container-fluid mt-5">
       {{{ body }}}
-    </div>
-  </main>
+    </main>
+    <footer>
+      
+    </footer>
+  </div>
 
-  <footer class="footer">
-    <div class="content has-text-centered">
-      <p class="has-text-light">
-        Task Manager &copy; 2024. All rights reserved.
-      </p>
-    </div>
-  </footer>
-
-  <script id="task-template" type="text/x-handlebars-template">
-    <!-- Your Handlebars template goes here -->
-  </script>
-
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.7.7/handlebars.min.js"></script>
+  {{#if logged_in}}
   <script src="/js/logout.js"></script>
-  <script src="/js/tasks.js"></script>
-
+  {{/if}}
 </body>
+
 </html>
