--- a/views/task.handlebars
+++ b/views/task.handlebars
@@ -1,17 +1,15 @@
-<div id="taskList">
+{{!-- <div id="taskList">
     {{#each tasks}}
-    <div class="task">
-        <p>Title: {{this.title}}</p>
-        <p>Description: {{this.description}}</p>
-        <p>Status: {{this.status}}</p>
-        <p>Created by: {{this.User.username}}</p> 
-        <select class="status-select">
-            <option value="pending" {{#if (eq this.status "pending" )}} selected{{/if}}>Pending</option>
-            <option value="completed" {{#if (eq this.status "completed" )}} selected{{/if}}>Completed</option>
-            <option value="inProgress" {{#if (eq this.status "inProgress" )}} selected{{/if}}>In Progress</option>
-        </select>
-        <button class="update-status">Update Status</button>
-    </div>
-    {{/each}}
+  <div class="box mt-5" data-task-id="{{id}}">
+  <h2 class="title is-3">{{title}}</h2>
+  <p>Status: {{status}}</p>
+  <p>Priority: {{priority}}</p>
+  <p>Start Date: {{start_date}}</p>
+  <p>Due Date: {{due_date}}</p>
+  <p>Description: {{description}}</p>
+  <button class="update-status">Update Status</button>
+  <button class="delete-task">Delete</button>
 </div>
-<script src="../public/js/tasks.js"></script>
+    {{/each}}
+</div> --}}
+{{!-- <script src="../public/js/tasks.js"></script> --}}
