--- a/views/pending.handlebars
+++ b/views/pending.handlebars
@@ -25,7 +25,8 @@
             <td>{{format_date due_date}}</td>
             <td>{{priority}}</td>
             <td>{{status}}</td>
-            <td><button id="{{id}}" class="button is-danger is-small is-rounded">remove</button></td>
+            <td><button class="delete-task button is-danger is-small is-rounded" id="{{id}}">remove</button>
+</td>
 
         </tr>
     </tbody>
@@ -35,5 +36,5 @@
 
 </table>
 
-{{!-- <script src="/js/tasks.js"></script> --}}
+<script src="/js/tasks.js"></script>
 </div>
