--- a/views/pending.handlebars
+++ b/views/pending.handlebars
@@ -1,3 +1,4 @@
+{{#if logged_in}}
 <h1 class="task-status">Pending Tasks</h1>
 <div class="card task-card">
 <table class="table is-bordered is-striped is-hoverable is-fullwidth pending-table">
@@ -36,5 +37,8 @@
 
 </table>
 
-<script src="/js/tasks.js"></script>
+{{else}}
+<h1>Please log in to view your tasks.</h1>
+{{/if}}
+<script src="/js/remove-tasks.js"></script>
 </div>
