--- a/views/tasks.handlebars
+++ b/views/tasks.handlebars
@@ -58,4 +58,5 @@
 {{else}}
 <h1>Please log in to view your tasks.</h1>
 {{/if}}
+<script src="/js/tasks.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.7.7/handlebars.min.js"></script>
